# pdf-vision

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: MEMORY.md  project_overview.md
app/: config.py  main.py
app/dto/: extract_dto.py  health.py
app/routers/: extract.py  facebook.py  health.py
app/services/: facebook_service.py  health_service.py  vision_service.py
nginx/: nginx.conf
