[project]
name = "pdf-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.135.2", "google-cloud-vision>=3.7.0"]

[dependency-groups]
dev = ["black>=26.3.1", "isort>=8.0.1", "ruff>=0.15.8"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"] # fixed: matches your actual src/ folder

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # pep8-naming
]
ignore = [
    "E501", # line too long — black handles this
    "B008", # do not perform function calls in default args (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
